# ffi-example

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/demo_library_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: demo_library.podspec
lib/: demo_library.dart  demo_library_bindings_generated.dart
linux/: CMakeLists.txt
macos/: demo_library.podspec
macos/Classes/: demo_library.c
src/: CMakeLists.txt  demo_library.c
windows/: CMakeLists.txt
